Authentication endpoint   ● Para autenticación del usuario. En el body del request deben ir los parámetros email   y password.   ● Si las credenciales de acceso (email y password) corresponden a un usuario, se   deberá generar y retornar el token en el campo Authorization de header del   response.   ● Para todos los endpoints que se requiera el token que deberá ser incluido en el   header en el atributo Authorization..   ● POST http://localhost:8080/auth   Restricciones   ● Para poder crear una playlist se requiere que el usuario esté autenticado   ● Solo el usuario que creó una playlist podrá actualizar el nombre de la misma,   agregar o quitar una canción o eliminarla.   ● Solo los endpoints “Consultar las canciones disponibles”, “Consultar playlists” y   “Consultar las canciones de una playlist” (definidos en el Tp2) pueden ser   consumidos por usuarios anónimos (el usuario no debe estar autenticado).

--- a/mymusic/src/main/resources/application.properties
+++ b/mymusic/src/main/resources/application.properties
@@ -15,3 +15,4 @@ logging.level.ROOT= INFO
 logging.level.org.springframework.orm.jpa= DEBUG
 logging.level.org.springframework.transaction= DEBUG
 spring.main.allow-bean-definition-overriding=true
+#logging.level.org.springframework.security = trace  para que la consola muestre todos los pasos y ayuda en el debuugin
